[package]
name = "bpu"
version = "0.1.0"    
description = "Bitcoin Processing Unit"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bsv = { git = "https://github.com/blocksurf/bsv-wasm", rev = "218f7f0840a8dc892b79114531eaf686a3b7ae07" }
serde = "1.0.192"
serde_json = "1.0"
serde_with = { version = "3.4.0", features = ["base64", "json"] }
thiserror = "1.0.50"
